tests/ui/const-generics/fn_with_two_const_inputs.stderr
error: unconstrained generic constant
  --> $DIR/fn_with_two_const_inputs.rs:12:5
   |
LL |     bar()
   |     ^^^^^
   |
note: required by a bound in `bar`
  --> $DIR/fn_with_two_const_inputs.rs:18:10
   |
LL | fn bar<const N: usize>() -> [(); N]
   |    --- required by a bound in this function
LL | where
LL |     [(); N + 1]:,
   |          ^^^^^ required by this bound in `bar`
help: try adding a `where` bound
   |
LL |     [(); both(N + 1, M + 1)]:, [(); N + 1]:
   |                                ++++++++++++

error: aborting due to 1 previous error

